 - removed now-superfluous "unconscious" check :]


TODO: 
- handbook entry
- localisation